welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
monkeyTrouble:1: error: ';' expected but 'if' found.
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {return true if (aSmile==bSmile)} 
                                                                          ^